# MyIcub

./: AlgoMatrix.h  Artificial_Eye.cpp  Artificial_Eye.h  CMakeCache.txt  CMakeLists.txt  CMakeLists_CLUSTER.txt  CMakeLists_PC.txt  General.h  README.md  chromosome.h  chromosomemdoubledouble.cpp  chromosomemdoubledouble.h  chromosomemdoubleint.cpp  chromosomemdoubleint.h  controller.h  ctrnn3Layers  ctrnn3Layers.cpp  ctrnn3Layers.h  ctrnn3LayersHebb  ctrnn3LayersHebb.cpp  ctrnn3LayersHebb.h  ctrnnFullyRecurrent.cpp  ctrnnFullyRecurrent.h  elman.cpp  elman.h  engine.cpp  engine.h  experiment.cpp  experiment.h  firstexp.cpp  firstexp.h  ga.h  general.cpp  general.h  gl_camera.cpp  gl_camera.h  icub.cpp  icub.h  init_run.txt  initialisation_param.txt  (+33 more)
